--- a/test/Makefile
+++ b/test/Makefile
@@ -102,6 +102,7 @@ s52gtk2egl: CFLAGS = -I.. -I. `pkg-config --cflags egl gtk+-2.0 libgps ` \
                      -DS52_USE_EGL           \
                      -DS52_USE_GLES2         \
                      -DS52_USE_MESA3D        \
+                     -DUSE_TEST_OBJ          \
                      -DUSE_AIS               \
                      -DS52_USE_AFGLOW
 
