--- a/test/Makefile
+++ b/test/Makefile
@@ -107,6 +107,7 @@ s52gtk2egl: CFLAGS = -I.. -I. `pkg-config --cflags egl gtk+-2.0 libgps ` \
 
 # same as s52eglx, but "gtk+-3.0" is added
 s52gtk3egl: CFLAGS = -I.. -I. `pkg-config --cflags egl gtk+-3.0 libgps`\
+                     -DUSE_TEST_OBJ          \
                      -DS52_USE_EGL           \
                      -DS52_USE_GLES2         \
                      -DUSE_AIS               \
